--- a/Ver. Un solo archivo/LogIn_Marcaciones-Offline.html
+++ b/Ver. Un solo archivo/LogIn_Marcaciones-Offline.html
@@ -41,7 +41,8 @@ section .contentBox{
     width: 100%;
     height: 100%;
     background: #e0e0e0;
-    background-image: linear-gradient(to bottom, #f6f6f6, #f0f0f0, #ebebeb, #e5e5e5, #e0e0e0); 
+/*     background: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);*/                 
+    background-image: linear-gradient(to bottom, #dfdfdf, #ececec, #dedede, #e5e5e5, #e0e0e0); 
 }
 
 section .contentBox .formBox{
@@ -79,8 +80,7 @@ section .contentBox .formBox label{
     font-size: 15px;
     letter-spacing: 1px;   
     margin-bottom: 5px;
-/*     margin-bottom: 10px;
- */
+    /* margin-bottom: 10px;*/
 
 }
 
@@ -97,10 +97,6 @@ section .contentBox .formBox input{
     border-radius: 5px;
     margin-top: 0px;
     position: relative;
-
-/*     margin-top: 0px;
- */
-
 }
 
 section .contentBox .formBox input:hover{
@@ -148,10 +144,7 @@ input:focus::placeholder {
 #togglePassword{
     position: fixed;
     right: 35%;
-    /* float: right; */
     padding: 9px 40px 10px 12px;
-/*     padding-top: 2%;
- */ /* margin-right: 25%; */
     margin-top: 5px;    
     cursor: pointer;
     z-index: 1;
