--- a/Ver. Un solo archivo/Inventario.html
+++ b/Ver. Un solo archivo/Inventario.html
@@ -48,7 +48,7 @@ section {
     width: 100%;
     height: 100vh;
     display: flex;
-    background-color: #21A66A;
+    background-color: #86d7b3;
     background: linear-gradient(to top, #c1dfc4 0%, #deecdd 100%);
 
     
@@ -76,9 +76,9 @@ section .contentBox .formBox {
     min-height: 672px;
     padding: 40px;
     background: white;
-   /*   box-shadow: none;*/
-    box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px; 
-    border-radius: 5px;
+    box-shadow: none;
+/*     box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px; 
+ */    border-radius: 5px;
     margin: 0px;  
     
 }
