:clown_face: Arreglando problemas con el icono

--- a/Version OFFLINE/ReporteFireFox.html
+++ b/Version OFFLINE/ReporteFireFox.html
@@ -349,12 +349,12 @@ input:focus::placeholder {
         <div class="row"> 
             <div class="col">
                 <div class="inputBox">
-                    <button type="reset" id="btnLimpiar" onclick = "limpiar()">Limpiar</button> 
+                    <button type="reset" id="btnLimpiar" onclick = "javascript:limpiar()">Limpiar</button> 
                 </div>
             </div>
         <div class="col">
             <div class="inputBox">
-                <button type="send" onclick="enviar()" id="btnEnviar" title="Submit" name="submit" >Aceptar</button>
+                <button type="send" onclick="javascript:enviar()" id="btnEnviar" title="Submit" name="submit" >Aceptar</button>
             </div>
         </div>
                     
