--- a/Version OFFLINE/ReporteFireFox.html
+++ b/Version OFFLINE/ReporteFireFox.html
@@ -73,6 +73,8 @@
 
 select {
     font-family: 'Roboto', sans-serif;
+    width: 100%;
+    width: -moz-available;
     width: -webkit-fill-available;
     padding: 10px 20px 10px 12px;
     outline: none;
@@ -338,12 +340,21 @@ input:focus::placeholder {
     </div>
 
 <br>
+<div class="inputBox">
+    <div class="container">
+    <div class="row">
+        <div class="col" style="padding-left: 0px; padding-right: 0px;     padding-right: 0px;
+        ">
+        <div class="alert alert-warning" role="alert" id="alert" >
+            <div>
+                <strong>Atención:</strong> campos vacíos, completelos
+            </div>
+        </div> 
+        </div>
+    </div>
+    </div>
+</div>  
 
-   <!--  <div class="alert alert-warning" role="alert">
-                A simple warning alert—check it out! tipo: Solo puede seleccionar una opcion o no zhe
-              </div> an alert can be add by using Bootsrap
-              https://getbootstrap.com/docs/5.0/components/alerts/
-         <br> -->
 
     <div class="container">
         <div class="row"> 
