:zap: Improve code

--- a/Version OFFLINE/ReporteFireFox.html
+++ b/Version OFFLINE/ReporteFireFox.html
@@ -107,21 +107,21 @@ section .contentBox{
     align-items: center;
     width: 100%;
     height: 100%;
-    background: #f5f5f5; 
-    background: #e0e0e0;
-    background-image: linear-gradient(to bottom, #f6f6f6, #f0f0f0, #ebebeb, #e5e5e5, #e0e0e0); 
-
-}
+    background: #4f47e6bd;  
+/*     background: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
+ */}
 
 section .contentBox .formBox{
     min-width: 440px;
-    max-width: 600px;
-    min-height: 400px;
+    height: 650px;
     padding:40px;
     background: white;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    margin: 5%;   
+    margin: 5%; 
+    border-radius: 5px;  
 }
+
+
 
 section .contentBox .formBox h2{
     font-size: var(--mobile-font-size);
@@ -178,6 +178,17 @@ input:focus::placeholder {
     max-width: 256px;
     height: 80px;
  }
+
+ section .contentBox .formBox #alert{
+    width: 100%;
+    width: -webkit-fill-available;
+    width: -moz-available;
+    display: none; 
+    margin-bottom: 20px;
+    height: 30px;
+    line-height:30px;
+    padding: 0px 15px;
+}
 
  #btnEnviar {
     color: white;
@@ -340,12 +351,12 @@ input:focus::placeholder {
     </div>
 
 <br>
+
 <div class="inputBox">
     <div class="container">
     <div class="row">
-        <div class="col" style="padding-left: 0px; padding-right: 0px;     padding-right: 0px;
-        ">
-        <div class="alert alert-warning" role="alert" id="alert" >
+        <div class="col" style="padding-left: 0px; padding-right: 0px; ">
+        <div class="alert alert-warning" role="alert" id="alert">
             <div>
                 <strong>Atención:</strong> campos vacíos, completelos
             </div>
@@ -405,12 +416,13 @@ $(document).ready(function () {
             partner.disabled = false;
         }
     }
-    checkSend(enviar());
+    checkSend(false);
 });
 
 function limpiar(){    
     document.getElementById("persona").disabled = false;
     document.getElementById("partner").disabled = false;
+    document.getElementById("alert").style.display = "none";
 }
 
 function checkSend(checker){
@@ -429,15 +441,29 @@ function checkSend(checker){
 
 function enviar(){
     if((date.value != "" && partner.selectedIndex > 0) || (date.value != "" && persona.selectedIndex > 0)){
+        document.getElementById("alert").style.display = "none";
         return true;
     }
-    else
+    else{
+        document.getElementById("alert").style.display = "inline-block";
         return false;
+        
+    }
+}
+function checker(){
+    if(enviar()){
+        document.getElementById("alert").style.display = "none";
+        return true;
+    }
+    else{
+        document.getElementById("alert").style.display = "none";
+        return false;
+    }
 }
 
-partner.addEventListener("change", () => checkSend(enviar()));
-persona.addEventListener("change", () => checkSend(enviar()));
-date.addEventListener("focus", () => checkSend(enviar()));
+partner.addEventListener("change", () => checkSend(checker()));
+persona.addEventListener("change", () => checkSend(checker()));
+date.addEventListener("focus", () => checkSend(checker()));
 
 $(function(){
     $(".date-picker").datepicker({
