--- a/Version OFFLINE/Dropdown.html
+++ b/Version OFFLINE/Dropdown.html
@@ -59,14 +59,26 @@
     </div>
     </div>
 </div>
-
 <br>
+<div class="inputBox">
+    <div class="container">
+    <div class="row">
+        <div class="col" style="padding-left: 0px; padding-right: 0px;">
+        <div class="alert alert-warning" role="alert" id="alert" style="display: none;" >
+            <div>
+                <strong>Atención:</strong> campos vacíos, completelos
+            </div>
+        </div> 
+        </div>
+    </div>
+    </div>
+</div>
 
 <div class="container" id="containerBtns" style="padding-left: 0; padding-right: 0;">
 <div class="row"> 
     <div class="col">
         <div class="inputBox">
-            <button type="reset" value="Limpiar" id="btnLimpiar" >Limpiar</button>
+            <button type="button" value="Limpiar" id="btnLimpiar" >Limpiar</button>
         </div>
     </div>
     <div class="col">
