--- a/Version OFFLINE/Inventario.html
+++ b/Version OFFLINE/Inventario.html
@@ -122,8 +122,7 @@
 <div class="inputBox">
     <div class="container">
     <div class="row">
-        <div class="col" style="padding-left: 0px; padding-right: 0px;     padding-right: 0px;
-        ">
+        <div class="col" style="padding-left: 0px; padding-right: 0px;">
         <div class="alert alert-warning" role="alert" id="alert" >
             <div>
                 <strong>Atención:</strong> campos vacíos, completelos
