--- a/LogIns/LogIn1/LogIn_Marcaciones.html
+++ b/LogIns/LogIn1/LogIn_Marcaciones.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login: Agape</title>
-    <link rel="icon" href="/RESOURCES/TabLogo1.png">
-    <link rel="stylesheet" href="/LogIn1/style1.css">
+    <link rel="icon" href="TabLogo1.png">
+    <link rel="stylesheet" href="style1.css">
     
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-        
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">       
 </head>
 <body>
 
@@ -18,7 +18,7 @@
 
     <div class="contentBox">
     <div class="formBox" aria-live="polite" > <!--  onsubmit="signup();return false;" onsubmit="signup()"  -->
-        <img src="/RESOURCES/image.png" alt="gob sv" class="logo">
+        <img src="image.png" alt="gob sv" class="logo">
             <br>
             <h2>Control y registro de marcaciones</h2>
             <br>
@@ -44,7 +44,7 @@
 
 </section>
 
-<script src="/LogIn1/app.js"></script>
+<script src="app.js"></script>
 
 <!-- Js de Bootstrap -->
 <!-- 
