--- a/Version OFFLINE/Dropdown.html
+++ b/Version OFFLINE/Dropdown.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -53,7 +53,7 @@
     <div class="row">
     <div class="col">
         <div>
-            <span id="municipio-code"></span>
+            <span id="municipio-code" style="width:100%"></span>
         </div>  
     </div>    
     </div>
