--- a/Version OFFLINE/ReporteFireFox.html
+++ b/Version OFFLINE/ReporteFireFox.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -40,7 +40,6 @@
 .container{
     display: grid;
     align-content: space-evenly;
-
 }
 
 .container .row .col{
@@ -91,8 +90,6 @@ select:hover{
 }
 
 
-
-
 section {
     position: relative;
     width: 100%;
@@ -111,10 +108,11 @@ section .contentBox{
 /*     background: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
  */}
 
+
 section .contentBox .formBox{
     min-width: 440px;
-    height: 650px;
-    padding:40px;
+    min-height: 570px;
+    padding: 40px;
     background: white;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     margin: 5%; 
@@ -136,7 +134,6 @@ section .contentBox .formBox h2{
     text-align: center;
     width: 100%;
 }
-
 
 section .contentBox .formBox .inputBx{
     margin-bottom: 20px;
@@ -266,11 +263,54 @@ input:focus::placeholder {
         width: 100%;
         padding:40px;
         background: white;
-       box-shadow: rgba(255, 255, 255, 0) 0px 3px 8px;
+        box-shadow: rgba(255, 255, 255, 0) 0px 3px 8px;
         margin: 5%;        
     }
 
 }
+
+/* Estilos para datepicker prev y next botones*/
+
+
+.ui-datepicker-prev span {
+	background-image: none !important;
+ }
+
+.ui-datepicker-next span {
+	background-image: none !important;	
+}
+
+.ui-datepicker-prev:before, .ui-datepicker-next:before {
+	position: absolute;
+	top:0;
+	bottom:0;
+	left:0;
+	right: 0;
+	display: flex;
+	align-items: center;
+	justify-items: center;
+	font-weight: normal;
+}
+
+.ui-datepicker-prev:before {
+	content: "/f100";
+}
+
+.ui-datepicker-next:before {
+	content: "/f100";
+}
+
+/* Style para  datepicker */ 
+
+
+.ui-datepicker-month, .ui-datepicker-year{
+    font-size: 12px !important;
+}
+
+.ui-datepicker-current, .ui-datepicker{
+    font-size: 15px !important;
+}
+
 </style> 
    
 </head>
@@ -284,6 +324,10 @@ input:focus::placeholder {
         <h2>Generar registro</h2>
         <br>
 <form method="get" target="_self" id="form_registro">
+
+
+<!-- Select que permita ingresar la fecha. Debe de hacerse con Jquery para permitir compatibilidad con navegadores que no acepten tecnologia Chromium -->
+
     <div class="inputBox">
         <div class="col-md-24 left">
             <label>Por fecha</label>
@@ -296,7 +340,6 @@ input:focus::placeholder {
         </div>
     </div>
     <br>
-    <!-- dad -->
         <div class="inputBox">
             <div class="col-md-24 left">
                 <label>Por persona</label>
@@ -306,18 +349,18 @@ input:focus::placeholder {
                 <div class="col">
                     <select  aria-label="Persona" id="persona" name="Persona">
                         <option value='action'>Selecionar persona </option>
-                        <option value="per_1"> Miguel Alejandro Navarro</option>
-                        <option value="per_2"> Daniela Michelle Torres</option>
-                        <option value="per_3"> Martín Elías Acosta</option>
-                        <option value="per_4"> Valeria Alexandra Escobar</option>
-                        <option value="per_5"> Adriana Carolina Martinez</option>
-                        <option value="per_6"> Carlos Gustavo Sánchez</option>
-                        <option value="per_7"> Adyni Arleht Pocasangre</option>
-                        <option value="per_8"> Carlos Fernando Vásquez</option>
-                        <option value="per_9"> Iris Yanet Aguilar</option>
-                        <option value="per_10"> Carlos Eduardo Grande</option>
-                        <option value="per_11"> Rebeca Jimana Alcaine</option>
-                        <option value="per_12"> José Luis Menjívar</option>
+                        <option value="persona_1"> Miguel Alejandro Navarro</option>
+                        <option value="persona_2"> Daniela Michelle Torres</option>
+                        <option value="persona_3"> Martín Elías Acosta</option>
+                        <option value="persona_4"> Valeria Alexandra Escobar</option>
+                        <option value="persona_5"> Adriana Carolina Martinez</option>
+                        <option value="persona_6"> Carlos Gustavo Sánchez</option>
+                        <option value="persona_7"> Adyni Arleht Pocasangre</option>
+                        <option value="persona_8"> Carlos Fernando Vásquez</option>
+                        <option value="persona_9"> Iris Yanet Aguilar</option>
+                        <option value="persona_10"> Carlos Eduardo Grande</option>
+                        <option value="persona_11"> Rebeca Jimana Alcaine</option>
+                        <option value="persona_12"> José Luis Menjívar</option>
                     </select>   
                 </div>    
             </div>
@@ -343,7 +386,7 @@ input:focus::placeholder {
                     <option value="partner_7">FEPADE</option>
                     <option value="partner_8">Fundación CINDE</option>
                     <option value="partner_9">ISDEMU</option>
-                    <option value="partner_10">Lorem, ipsum.</option>
+                    <option value="partner_10">LOREM IPSUM</option>
                 </select>                         
             </div> 
         </div>
@@ -352,11 +395,13 @@ input:focus::placeholder {
 
 <br>
 
+<!-- Alerta que notifique al usuario de espacios dejados en blanco -->
+
 <div class="inputBox">
     <div class="container">
     <div class="row">
         <div class="col" style="padding-left: 0px; padding-right: 0px; ">
-        <div class="alert alert-warning" role="alert" id="alert">
+        <div class="alert alert-warning" role="alert" id="alerta"> <!-- ver el id -->
             <div>
                 <strong>Atención:</strong> campos vacíos, completelos
             </div>
@@ -366,6 +411,7 @@ input:focus::placeholder {
     </div>
 </div>  
 
+<!-- Creando botones que permitan: 1- limpiar los inputs y los devuelvan a su estado original, 2. Bton que permita enviar los dsatros ingresados por el usuario -->
 
     <div class="container">
         <div class="row"> 
@@ -391,9 +437,11 @@ input:focus::placeholder {
 
 <!-- *************************** -->
 <script>
+
 let partner = document.getElementById("partner");
 let persona = document.getElementById("persona");
 let date = document.getElementById("fechaIpt");
+
 
 $(document).ready(function () {
     partner.onchange = function(){
@@ -406,40 +454,42 @@ $(document).ready(function () {
             persona.disabled = false;
         }
     }
+
     persona.onchange = function(){
         if(this.value != "action"){
             partner.selectedIndex = 0;
             partner.disabled = true;
         }
         else{
-
             partner.disabled = false;
         }
     }
-    checkSend(false);
+    checkSend(enviar());
 });
 
 function limpiar(){    
     document.getElementById("persona").disabled = false;
     document.getElementById("partner").disabled = false;
+    document.getElementById("fechaIpt").disabled = false;
     document.getElementById("alert").style.display = "none";
 }
 
 function checkSend(checker){
     //console.log(checker);
     if(!checker){
-        $("#form_registro").submit(function(e){
+        //cambiar eso del #, antes lo tenia en el form_registros
+        $("form_registro").submit(function(e){
             e.preventDefault();
         });
     }
     else{
-        $("#form_registro").unbind("submit").submit();
+        $("form_registro").unbind("submit").submit();
 
 
     }
 }
 
-function enviar(){
+/* function enviar(){
     if((date.value != "" && partner.selectedIndex > 0) || (date.value != "" && persona.selectedIndex > 0)){
         document.getElementById("alert").style.display = "none";
         return true;
@@ -450,7 +500,8 @@ function enviar(){
         
     }
 }
-function checker(){
+ */
+/* function checker(){
     if(enviar()){
         document.getElementById("alert").style.display = "none";
         return true;
@@ -459,23 +510,61 @@ function checker(){
         document.getElementById("alert").style.display = "none";
         return false;
     }
-}
+} */
 
-partner.addEventListener("change", () => checkSend(checker()));
-persona.addEventListener("change", () => checkSend(checker()));
-date.addEventListener("focus", () => checkSend(checker()));
+function enviar(){{
+    if(((date.value != "" && partner.selectedIndex > 0) || (date.value != "" && persona.selectedIndex > 0))){
+        document.getElementById("form_registro").submit();
+    }
+    else{
+        alerta.style.display = "inline-block";
+        alerta.style.width = "100%";}
+        alerta.style.overflow = "hidden"; }
+    }
+    partner.addEventListener("focus", ()=> alerta.style.display = "none");
+    persona.addEventListener("focus", ()=> alerta.style.display = "none");
+    function limpiar{
+        alerta.style.display = "none";
+    }
+
+
+
+
+
+partner.addEventListener("change", () => checkSend(enviar()));
+persona.addEventListener("change", () => checkSend(enviar()));
+date.addEventListener("focus", () => checkSend(enviar()));
 
 $(function(){
     $(".date-picker").datepicker({
+        //permitiendo cambio de mes con selects
         changeMonth: true,
+        //asignando array para input en español Y select en español 
+        monthNames:['Enero', 'Febrero', 'Marzo', 'Abril', 'Mayo', 'Junio', 'Julio', 'Agosto', 'Septiembre', 'Octubre', 'Noviembre', 'Diciembre'],
+        monthNamesShort:['Enero', 'Febrero', 'Marzo', 'Abril', 'Mayo', 'Junio', 'Julio', 'Agosto', 'Septiembre', 'Octubre', 'Noviembre', 'Diciembre'],
+        //permitiendo cambioo de año por select
         changeYear: true,
+        //agregando botones
         showButtonPanel: true,
+        // agregando span a botones
+        prevText: 'Anterior',
+        nextText: 'Siguiente',
+        //boton seleccion mes actual
+        currentText: 'Hoy',
+        //boton para cerrar y guardar
+        closeText: 'Guardar',
+        //formato esperado
         dateFormat: "MM yy",
+//funciones para valores selccionados al input
         onClose: function(dateText, pickedDate){
             $(this).datepicker("setDate", new Date(pickedDate.selectedYear, pickedDate.selectedMonth, 1));
         }
     });
 });
+
+
+
+
 
 
 </script>
