:zap: improve performance

--- a/Version OFFLINE/LogIn_Marcaciones-Offline.html
+++ b/Version OFFLINE/LogIn_Marcaciones-Offline.html
@@ -61,7 +61,7 @@ section .contentBox .formBox h2{
     font-size: 1.5em;
     margin-top: 30px;
     margin-bottom: 0px;
-    display: inne-block;
+    display: inline-block;
     letter-spacing: 1px;
     text-align: center;
 
@@ -74,13 +74,12 @@ section .contentBox .formBox .inputBx{
 section .contentBox .formBox label{
     font-size: 16px;
     font-size: var(--mobile-font-size);
-    display: inne-block;
+    display: inline-block;
     color: black;
     font-weight: 500;
     font-size: 15px;
     letter-spacing: 1px;   
     margin-bottom: 5px;
-    /* margin-bottom: 10px;*/
 
 }
 
@@ -143,7 +142,7 @@ input:focus::placeholder {
 
 #togglePassword{
     position: fixed;
-    right: 35%;
+    right: 38%;
     padding: 9px 40px 10px 12px;
     margin-top: 5px;    
     cursor: pointer;
